# macgent

./: .env.example  .gitignore  LICENSE  README.md  TELEGRAM_BOT.md  macgent_config.json.example  pyproject.toml
docs/: MEMORY.md  PROJECT_SETUP.md  SOUL.md
examples/: booking_hotels.sh  captcha_smoke.sh  check_for_houses_in_basel.sh  google_sheets.sh  gym_search.sh  mail_test.sh  web_search_test.sh
macgent/: __main__.py  agent.py  config.py  daemon.py  db.py  memory.py  message_bus.py  models.py  pulse.py  telegram_bot.py  utils_osascript.py
macgent/actions/: agent_browser.py  brave_search.py  browser_use_action.py  calendar_actions.py  captcha_solver.py  dispatcher.py  imessage_actions.py  keyboard.py  mail_actions.py  mouse.py  notion_actions.py  safari_actions.py  shell_session.py  vision.py
macgent/monitors/: email_monitor.py
macgent/perception/: safari.py  screenshot.py
macgent/prompts/: role_prompts.py  system_prompt.py  vision_prompt.py
macgent/reasoning/: browser_signals.py  llm_client.py  reasoner.py  vision.py
scripts/: gateway_client.py  kilo_api_server.py  kilo_wrapper.py  tg_history.py
skills/: README.md  calendar_operations.md  email_operations.md  javascript.md
souls/: identity.md  manager.md  worker.md
tests/: test_agent_browser_delegate.py  test_brave_search.py  test_browser_signals.py  test_browser_use_action.py  test_config_browser_defaults.py  test_dispatcher_brave_search.py  test_dispatcher_browser_task.py  test_dispatcher_evaluate_image.py  test_fallback_next_offer.py  test_fallback_retry_policy.py  test_llm_offer_resolution.py  test_memory_context.py
(+52 files in other folders)
