[project]
name = "macgent"
version = "0.1.0"
description = "macOS automation agent with LLM-driven observe-think-act loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "faiss-cpu>=1.7",
    "fastembed>=0.4",
    "browser-use>=0.1",
    "playwright>=1.58.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
macgent = "macgent.__main__:main"
