[project]
name = "macgent"
version = "0.1.0"
description = "macOS automation agent with LLM-driven observe-think-act loop"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "faiss-cpu>=1.7",
    "fastembed>=0.4",
    "playwright>=1.58.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "browserforge>=1.2.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
macgent = "macgent.__main__:main"
